--- a/css/users.css
+++ b/css/users.css
@@ -1,34 +1,33 @@
-
 /* Datos de usuario */
-.dataUser h2{
+.dataUser h2 {
   margin-left: 10%;
   margin-top: 0;
   padding-top: 10rem;
 }
 
-.inputs_dataUser{
-  margin-left:20%;
+#main .inputs_dataUser {
+  margin-left: 20%;
   padding: 1rem;
 }
-.inputs_dataUser label{
+.inputs_dataUser label {
   width: 12rem;
-  display:inline-block;
+  display: inline-block;
   margin-right: 1rem;
   margin-top: 1rem;
   font-weight: bold;
 }
-.inputs_dataUser input{
+.inputs_dataUser input {
   height: 2rem;
 }
 
-.inputs_dataUser input:nth-of-type(-n+3){
+.inputs_dataUser input:nth-of-type(-n + 3) {
   width: 15rem;
 }
-.inputs_dataUser input:nth-of-type(+n+5){
+.inputs_dataUser input:nth-of-type(+ n + 5) {
   width: 15rem;
 }
 
-.btnGuardar{
+.btnGuardar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
@@ -38,83 +37,82 @@
   font-weight: bold;
   font-size: 1rem;
   margin-top: 1.5rem;
-  
 }
 
 /* Listado de Reservas */
-.reserves h2{
+.reserves h2 {
   margin-top: 5rem;
   margin-left: 10%;
 }
 
-.reservesTable{
+.reservesTable {
   margin-left: 10%;
   border-collapse: separate;
   border: black 1px solid;
-  background-color:lightgray;
+  background-color: lightgray;
   padding-bottom: 10rem;
 }
 
-.reservesTable th{
+.reservesTable th {
   width: 8rem;
   text-align: center;
-  border-bottom-style:double;
+  border-bottom-style: double;
 }
-.reservesTable td{
+.reservesTable td {
   text-align: center;
 }
 
-.reserves h4{
+.reserves h4 {
   margin-top: 0;
   text-align: center;
   font-weight: lighter;
 }
 
 /*Sección de Comentarios*/
-.reviews{
+.reviews {
   margin-left: 10%;
   margin-bottom: 10rem;
 }
-.reviews h2{
+.reviews h2 {
   margin-top: 5rem;
 }
 /* .reviews div{
   display:inline-block;
 } */
 
-.reviewsTable{
+.reviewsTable {
   border-collapse: separate;
   border: black 1px solid;
-  background-color:lightgray;
+  background-color: lightgray;
   /* padding-bottom: 10rem; */
   margin-bottom: 0.4rem;
 }
 
-.reviewsTable th{
+.reviewsTable th {
   width: 8rem;
   padding-bottom: 1rem;
   text-align: center;
-  border-bottom-style:double;
+  border-bottom-style: double;
 }
-.reviewsTable th:nth-child(3){
+.reviewsTable th:nth-child(3) {
   width: 30rem;
 }
-.reviewsTable th:last-child{
+.reviewsTable th:last-child {
   width: 3rem;
-  border-bottom-style:none;
+  border-bottom-style: none;
 }
 
-.reviewsTable td{
+.reviewsTable td {
   padding-top: 1rem;
   text-align: center;
 }
-.reviews div:last-child{
+.reviews div:last-child {
   margin-top: 2.5rem;
   margin-left: 9rem;
   vertical-align: top;
 }
 
-.btnEditar{
+.btnEditar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
@@ -124,7 +122,7 @@
   font-size: 1rem;
 }
 
-.btnEliminar{
+.btnEliminar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
@@ -139,4 +137,3 @@
   text-align: center;
   font-weight: lighter;
 } */
-
