commit on 'angel'

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
   width: 100%;
   /* height: 50rem; */
   /* height: 100%; */
-  object-fit: cover;
+  object-fit: contain;
   /* position: relative; */
 }
 
@@ -85,11 +85,16 @@
   height: 13rem;
 } */
 
+/* TEXTO DESCRIPCIÓN */
 .information {
   display: flex;
   flex-direction: column;
-  margin: 4rem 4rem;
+  /* margin: 4rem 4rem; */
+  margin: 2rem auto;
+  column-width: 14em;
+  max-width: 50rem;
 }
+/* TITULO */
 .information h3 {
   text-align: center;
   margin-bottom: 1rem;
@@ -102,9 +107,8 @@
   display: grid;
   grid-gap: 2em;
   grid-template-columns: 2fr 1fr;
-  max-width: 50rem;
   margin: 0 auto;
-  column-width: 20rem;
+  /* column-width: 20rem; */
   column-gap: 2.75rem;
   column-rule: 1px solid #ccc;
   align-items: start;
@@ -158,6 +162,7 @@
   color: #f8f8f2;
 }
 .booking form input {
+  text-align: center;
   border-radius: 0.5rem;
   border-color: #f8f8f2;
 }
@@ -181,10 +186,24 @@
 }
 
 .btn-booking:hover {
-  background-color: var(--blue);
-  color: var(--white);
+  background-color: var(--white);
+  color: var(--blue);
   cursor: pointer;
   /* padding: 0rem 3em; */
+}
+
+.information .btn-share:hover {
+  background-color: firebrick;
+  color: var(--white);
+}
+.information .btn-share {
+  background-color: var(--blue);
+  color: var(--white);
+  border: 1px solid var(--white);
+  padding: 0.4rem 3em;
+  width: 100%;
+  border-radius: 0.5rem;
+  text-decoration: none;
 }
 /* .btn-share {
   background-color: #005596;
