--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ header {
 
 .topbar .logo-top img {
   height: 2rem;
+  /* blue filter */
+  filter: invert(15%) sepia(99%) saturate(2795%) hue-rotate(192deg)
+    brightness(98%) contrast(102%);
+  /* white filter */
+  /* filter: invert(100%) sepia(52%) saturate(396%) hue-rotate(24deg)
+    brightness(110%) contrast(95%); */
   /* align-items: center; */
   /* padding: 0.3rem; */
 }
@@ -193,28 +199,33 @@ pasó de nth-child(2) a nth-child(1) */
 
 /*FIXME ALL BUTTONS HOVER*/
 button:hover {
-  opacity: 0.8;
+  /* opacity: 0.8; */
   text-decoration: underline;
 }
 .toggle {
   display: flex;
   position: relative;
-  width: 2.25rem;
-  height: 2.25rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  justify-self: center;
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
   cursor: pointer;
-  color: var(--blue);
-  background-color: var(--white);
-  margin: 0.5rem;
+  background-color: var(--blue);
+  color: var(--white);
+  border: 3.75px solid var(--white);
+  margin: 1.5rem 0.75rem;
   border-radius: 50%;
   text-decoration: none;
-  border: none;
+  font-size: 1.5rem;
+  /* border: none; */
 }
 
 .toggle:hover {
   /* opacity: 0.8; */
+  background-color: var(--white);
+  color: var(--blue);
   text-decoration: none;
 }
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -227,6 +238,12 @@ button:hover {
   }
 }
 
+/* FOOTER */
+/* SOCIAL MEDIA */
+footer {
+  margin: 5rem auto 1rem auto;
+  /* color: black; */
+}
 .social-media {
   display: flex;
   text-align: center;
@@ -234,23 +251,44 @@ button:hover {
 }
 .social-media span {
   margin-left: 1rem;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 .social-media span a i {
-  color: black;
+  padding: 0 0.2rem;
+  color: var(--black2);
 }
-footer {
-  background-color: #ccc;
-  color: black;
+
+.social-media span a i:hover {
+  color: var(--blue);
+}
+
+footer .footer-bottom {
+  display: flex;
+  margin-top: 0.5rem;
+  justify-content: space-around;
 }
 .logo-footer {
   display: flex;
   justify-content: space-around;
   text-align: center;
+  /* filter: invert(67%) sepia(0%) saturate(4%) hue-rotate(284deg) brightness(91%)
+    contrast(95%); */
+  /* background-color: var(--black2); */
+  /* color: var(--white); */
 }
+
+.logo-footer a img:hover,
+.img:focus {
+  filter: invert(15%) sepia(99%) saturate(2795%) hue-rotate(192deg)
+    brightness(98%) contrast(102%);
+  /* fill: var(--blue); */
+}
+
 footer div h5 {
   text-align: center;
   padding-bottom: 2rem;
+  /* background-color: var(--black1); */
+  color: var(--black2);
 }
 
 /* .nav-footer {
@@ -269,6 +307,7 @@ footer div h5 {
   display: flex;
   margin: 1rem 10rem;
   justify-content: center;
+  color: var(--black2);
   /* flex-wrap: wrap; */
   /* flex-flow: column; */
 }
@@ -279,6 +318,13 @@ footer div h5 {
   /* flex-wrap: wrap; */
   /* flex-direction: column; */
   /* flex-flow: column; */
+}
+#nav-footer ul li a:hover {
+  color: var(--blue);
+}
+#nav-footer .nav-footer a {
+  color: inherit;
+  text-decoration: none;
 }
 /* @keyframes fade {
   from {
