--- a/templates/gestionAdministradores.html
+++ b/templates/gestionAdministradores.html
@@ -1,5 +1,15 @@
-{% extends "base.html" %} {% block content %}
-
+{% extends "base.html" %} {% block head %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/gestionAdministradores.css') }}"
+/>
+{% endblock %} {% block content %}
 <!-- MODAL SAVE DATA-ADMIN -->
 <div id="modal-id04" class="modal">
   <form class="modal-content animate" action="/action_page.php">
@@ -105,6 +115,7 @@
     </section>
   </div>
 </div>
+
 <script>
   function seleccionar(tr, value) {
     this.chk1.click();
