--- a/templates/registro.html
+++ b/templates/registro.html
@@ -7,9 +7,9 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/habitaciones.css') }}"
+  href="{{ url_for('static', filename='css/registro.css') }}"
 />
 {% endblock %} {% block content %}
-<h2>Habitaciones</h2>
+<h2>Registro</h2>
 <a href={{ url_for("home") }}>Home</a>
 {% endblock %}
