--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reservas</title>
-  </head>
-  <body>
-    <h2>Reservas</h2>
-    <a href="index.html">Home</a>
-  </body>
-</html>
+{% extends "base.html" %} {% block head %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/reservas.css') }}"
+/>
+{% endblock %} {% block content %}
+<h2>Reservas</h2>
+<a href={{ url_for("home") }}>Home</a>
+{% endblock %}
